# AudioClean

./: .gitignore  README.md  ROADMAP.md  audioclean.spec  pyproject.toml
.github/workflows/: build-binaries.yml  release.yml
audioclean/: __init__.py  __main__.py
audioclean/api/: sdk.py
audioclean/commands/: cli.py
audioclean/core/: config.py  db.py  models.py  reporter.py
audioclean/engine/: analyzer.py  applier.py  art.py  duplicates.py  meta.py  planner.py  resolver.py  scanner.py  tagger.py
audioclean/ui/: settings_ui.py
audioclean/utils/: fpcalc.py  fs.py  hash.py  tags.py
packaging/npm/: README.md
scripts/: build_binaries.py
