[project]
name = "audioclean"
version = "1.0.0b"
description = "CLI-first music fingerprinting and metadata fixer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "typer>=0.12.0",
  "rich>=13.7.0",
  "mutagen>=1.47.0",
  "blake3>=0.4.1",
  "prompt_toolkit>=3.0.43",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0.0",
]

[project.scripts]
audioclean = "audioclean.commands.cli:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["audioclean*"]
exclude = ["packaging*", "scripts*"]

[tool.ruff]
line-length = 100
